cabal-version:      3.4
name:               ffi-quickcheck
version:            0.1.0.0
synopsis:           Quickchecking a couple of C libraries
description:        Quickchecking a couple of C libraries
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Dan Dart
maintainer:         git@dandart.co.uk
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
                    cbits/*.h
                    cbits/*.c

common shared-properties-base
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:
    DerivingStrategies
    UnicodeSyntax
  ghcjs-options:       -dedupe

common shared-properties-lib
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Werror
    -haddock
  build-depends:       base >= 4.16.4.0 && < 5
  default-extensions:
    NoGeneralizedNewtypeDeriving

common shared-properties-unsafe
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-prepositive-qualified-module
    -Werror
    -haddock
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.16.4.0 && < 5
  default-extensions:
    NoGeneralizedNewtypeDeriving

common shared-properties-safe
  import: shared-properties-unsafe
  default-extensions:
    NoGeneralizedNewtypeDeriving
    Safe

common shared-properties-nobase
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-prepositive-qualified-module
    -Werror
    -haddock
    -threaded -rtsopts -with-rtsopts=-N

library
    import:           shared-properties-lib
    exposed-modules:  
        Queue.Foreign
    -- cc-options: -std=c88
    c-sources:
        -- cbits/queue.h
        cbits/queue.c
    include-dirs:
        cbits
    extra-libraries: pthread
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   lib

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax
  build-depends:       base >= 4.16.4.0 && < 5, ffi-quickcheck, hspec, QuickCheck
  other-modules:       Queue.ForeignSpec
