cabal-version:      3.12
name:               ffi-quickcheck
version:            0.2.0.0
synopsis:           Quickchecking a couple of C libraries
description:        Quickchecking a couple of C libraries
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
  cbits/*.c
  cbits/*.h

common shared-properties-base
  hs-source-dirs:     src
  if arch(javascript)
    js-sources: jsbits/emcc-config.js
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  ghcjs-options:      -dedupe

common shared-properties-lib
  import:             shared-properties-base
  ghc-options:
    -Weverything -Wno-implicit-prelude
    -Wno-inferred-safe-imports -Wno-missing-deriving-strategies
    -Wno-missing-export-lists -Wno-missing-import-lists
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Werror -haddock

  build-depends:      base ^>=4.21.0.0
  default-extensions: NoGeneralizedNewtypeDeriving

common shared-properties-unsafe
  import:        shared-properties-base
  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N 
  ghc-options:
    -Weverything -Wno-implicit-prelude
    -Wno-inferred-safe-imports -Wno-missing-deriving-strategies
    -Wno-missing-export-lists -Wno-missing-import-lists
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Werror -haddock

  build-depends: base ^>=4.21.0.0

common shared-properties-safe
  import:             shared-properties-unsafe
  default-extensions:
    NoGeneralizedNewtypeDeriving
    Safe

common shared-properties-nobase
  import:      shared-properties-base
  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N 
  ghc-options:
    -Weverything -Wno-implicit-prelude
    -Wno-inferred-safe-imports -Wno-missing-deriving-strategies
    -Wno-missing-export-lists -Wno-missing-import-lists
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Werror -haddock

library
  import:          shared-properties-lib
  exposed-modules: Queue.Foreign

  -- cc-options: -std=c88
  c-sources:       cbits/queue.c

  -- cbits/queue.h
  include-dirs:    cbits
  extra-libraries: pthread

  -- other-modules:
  -- other-extensions:
  build-depends:   base ^>=4.21.0.0
  hs-source-dirs:  lib

test-suite test
  if arch(javascript) || arch(wasm32)
    buildable: False
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base            ^>=4.21.0.0
    , ffi-quickcheck  ^>=0.2.0.0
    , hspec           ^>=2.11.10
    , QuickCheck      ^>=2.16.0.0

  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      Queue.ForeignSpec
