cabal-version:   3.12
name:            ffi
version:         0.2.0.0
synopsis:        Some FFI demos
description:     Some FFI demos
license:         AGPL-3.0-or-later
license-file:    LICENSE
author:          Dan Dart
maintainer:      git@dandart.co.uk

-- copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
--   cbits/*.c
--   cbits/*.h

common shared-properties-base
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  ghcjs-options:      -dedupe

common shared-properties-lib
  import:             shared-properties-base
  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock

  build-depends:      base ^>=4.22
  default-extensions: NoGeneralizedNewtypeDeriving

common shared-properties-unsafe
  import:        shared-properties-base

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock

  build-depends: base ^>=4.22

common shared-properties-safe
  import:             shared-properties-unsafe
  default-extensions:
    NoGeneralizedNewtypeDeriving
    Safe

common shared-properties-nobase
  import:      shared-properties-base

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock

-- when you want to import a haskell library into haskell
-- library
--   import:          shared-properties-lib
--   exposed-modules: Lib
--   -- include-dirs:    cbits
--   -- extra-libraries: pthread
--   -- other-modules:
--   -- other-extensions:
--   build-depends:   base ^>=4.22
--   hs-source-dirs:  lib

-- foreign library is when you want to import a haskell library using a wrapper into something C-like
foreign-library haskelldemo_withhelper
  import:            shared-properties-lib
  type:              native-shared

  if os(windows)
    options: standalone

  c-sources:         cbits/hswrapper.c
  cpp-options:       -DMODULE=libHSDemo_withhelper
  build-depends:     base ^>=4.22

  -- lib-version-info: 0:0:0
  lib-version-linux: 0.0.0
  hs-source-dirs:    lib
  other-modules:     Lib

foreign-library haskelldemo
  import:            shared-properties-lib
  type:              native-shared

  if os(windows)
    options: standalone

  cpp-options:       -DMODULE=libHSDemo
  build-depends:     base ^>=4.22

  -- lib-version-info: 0:0:0
  lib-version-linux: 0.0.0
  hs-source-dirs:    lib
  other-modules:     Lib

-- executable ffihstoc
--   import:          shared-properties-unsafe
--   build-depends:   base ^>=4.22
--   -- c-sources:
--   --   src/libdemo.c
--   extra-libraries: libdemo
--   hs-source-dirs:  src
--   main-is:         Main.hs

executable dlhstoc
  import:         shared-properties-unsafe
  build-depends:
    , base  ^>=4.22
    , unix  ^>=2.8.6

  -- c-sources:
  --   src/libdemo.c
  cpp-options:    -DDYNAMIC_LIBRARY

  -- extra-libraries: libdemo
  hs-source-dirs: src
  main-is:        Main.hs

-- executable ffi
--   import:          shared-properties-unsafe
--   build-depends:   base ^>=4.22
--   -- other-libraries: libdemo
--   hs-source-dirs:  src
--   main-is:         Main.hs

-- test-suite test
--   if arch(javascript) || arch(wasm32)
--     buildable: False
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     test
--   main-is:            Spec.hs
--   default-language:   GHC2024
--   default-extensions:
------     UnicodeSyntax
--   build-depends:
--     , base            ^>=4.22
--     , ffi-quickcheck
--     , hspec                 ^>=2.11.15
--     , QuickCheck ^>=2.17
--   build-tool-depends: hspec-discover:hspec-discover
--   other-modules:      Queue.ForeignSpec
