cabal-version:      2.4
name:               ffijs
version:            0.1.0.0
synopsis:           ffijs
description:        ffijs
bug-reports:        https://github.com/danwdart/projects/issues
license:            CC0-1.0
author:             Dan Dart
maintainer:         git@dandart.co.uk
copyright:          2022 Dan Dart
category:           js
extra-source-files: CHANGELOG.md

-- library
--     build-depends:    base, ghcjs-base
--     hs-source-dirs:   src
--     default-language: Haskell2010
--     default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
--     ghcjs-options:    -DGHCJS_NODE
--     exposed-modules:
--         LibDemo

executable ffihstojs
  main-is:            Main.hs
  js-sources:         src/libdemo.js
  build-depends:
    , base
    , ghcjs-base

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  ghcjs-options:      -DGHCJS_NODE

-- exposed-modules:
--    LibDemo
