cabal-version:      3.14
name:               ffijs
version:            0.2.0.0
synopsis:           ffijs
description:        ffijs
bug-reports:        https://github.com/danwdart/projects/issues
license:            CC0-1.0
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2022 Dan Dart
category:           js
extra-doc-files:    CHANGELOG.md

-- library
--     build-depends:    base, ghcjs-base
--     hs-source-dirs:   src
--     default-language: GHC2024
--     default-extensions:  UnicodeSyntax
--     ghcjs-options:    -DGHCJS_NODE
--     exposed-modules:
--         LibDemo

executable ffihstojs
  main-is:            Main.hs
  js-sources:         src/libdemo.js
  build-depends:
    , base        ^>=4.22
    , ghcjs-base  ^>=0.8.0.2

  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  ghcjs-options:      -DGHCJS_NODE

-- exposed-modules:
--    LibDemo
