cabal-version:      3.4

-- Newer versions complain
name:               games
version:            0.1.0.0
homepage:           https://github.com/danwdart/projects#readme
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

library
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      
      base >=4.20.0.0 && <5
    , lattices
  exposed-modules:
    Control.Exception.RangeException
    Game.Bounce
    Numeric.Range
    Propagator

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags

common shared-properties
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      base >=4.20.0.0 && <5
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

executable 1010
  import:        shared-properties
  main-is:       1010.hs
  build-depends:
    , base        >=4.20.0.0 && <5
    , containers

executable 10x10grid
  import:        shared-properties
  main-is:       10x10grid.hs
  build-depends:
    , base         >=4.20.0.0 && <5
    , bifunctors
    , MonadRandom

executable 2048
  import:        shared-properties
  main-is:       2048.hs
  build-depends:
    , base         >=4.20.0.0 && <5
    , MonadRandom

executable bounce
  import:        shared-properties
  main-is:       bounce.hs
  build-depends: base >=4.20.0.0 && <5

-- executable bingo
--   import:        shared-properties
--   main-is:       bingo.hs
--   build-depends:
--     , base         >=4.20.0.0 && <5
--     -- , fakedata >= 1.0.3
--     -- , games
--     , MonadRandom
--     , mtl
--     , random-shuffle
--     -- , text
--     -- , text-display
--     -- , vector

executable countdown
  import:        shared-properties
  main-is:       countdown.hs
  build-depends:
    , base          >=4.20.0.0 && <5
    , games
    , text
    , text-display

-- , MonadRandom
-- , mtl
executable frog
  import:        shared-properties
  main-is:       frog.hs
  build-depends:
    , base         >=4.20.0.0 && <5
    , containers
    , MonadRandom

executable hangman
  import:        shared-properties
  main-is:       hangman.hs
  build-depends: base >=4.20.0.0 && <5

--executable razzledazzle
--  hs-source-dirs:      src
--  main-is:             razzledazzle.hs
--  --  build-depends:       base >= 4.19.1.0 && < 5, monad-loops, probability, random, rando, utility-ht

executable snl
  import:        shared-properties
  main-is:       snl.hs
  build-depends:
    , ansi-terminal
    , base           >=4.20.0.0 && <5
    , containers
    , lens
    , MonadRandom
    , mtl

-- aeson, protobuf, random, yaml

executable sudoku
  import:        shared-properties
  main-is:       sudoku.hs
  build-depends:
    , base        >=4.20.0.0 && <5
    , containers
    , extra
    , games
    , vector

executable sudoku-dev
  import:        shared-properties
  ghc-options:   -Wwarn
  hs-source-dirs: src lib
  main-is:       sudoku.hs
  other-modules:
    Propagator
  build-depends:
    , base        >=4.20.0.0 && <5
    , containers
    , extra
    , lattices
    , vector

executable yesyes
  import:        shared-properties
  main-is:       yesyes.hs
  build-depends: base >=4.20.0.0 && <5

test-suite games-test
  import:             shared-properties
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Game.BounceSpec
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base        >=4.20.0.0 && <5
    , games
    , hspec
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover

-- , hspec-core
-- , hspec-expectations
