cabal-version:      3.12

-- Newer versions complain
name:               games
version:            0.2.0.0
homepage:           https://github.com/danwdart/projects#readme
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

library
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base      ^>=4.21.0.0
    , lattices  ^>=2.2.1

  exposed-modules:
    Control.Exception.RangeException
    Game.Bounce
    Numeric.Range
    Propagator

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags

common shared-properties
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      base ^>=4.21.0.0
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

executable 1010
  import:        shared-properties
  main-is:       1010.hs
  build-depends:
    , base        ^>=4.21.0.0
    , containers  ^>=0.8

executable 10x10grid
  import:        shared-properties
  main-is:       10x10grid.hs
  build-depends:
    , base         ^>=4.21.0.0
    , bifunctors   ^>=5.6.2
    , MonadRandom  ^>=0.6.1

executable 2048
  import:        shared-properties
  main-is:       2048.hs
  build-depends:
    , base         ^>=4.21.0.0
    , MonadRandom  ^>=0.6.1

executable bounce
  import:        shared-properties
  main-is:       bounce.hs
  build-depends: base ^>=4.21.0.0

-- executable bingo
--   import:        shared-properties
--   main-is:       bingo.hs
--   build-depends:
--     , base         ^>=4.21.0.0
--     -- , fakedata ^>= 1.0.3
--     -- , games ^>=0.2.0.0
--     , MonadRandom ^>=0.6.1
--     , mtl                  ^>=2.3.1
--     , random-shuffle ^>=0.0.4
--     -- , text        ^>=2.1.2
--     -- , text-display ^>=1.0.0.0
--     -- , vector ^>=0.13.2.0

executable countdown
  import:        shared-properties
  main-is:       countdown.hs
  build-depends:
    , base                 ^>=4.21.0.0
    , games                ^>=0.2.0.0
    , text                 ^>=2.1.2
    , text-builder-linear  ^>=0.1.3
    , text-display         ^>=1.0.0.0

-- , MonadRandom ^>=0.6.1
-- , mtl                  ^>=2.3.1
executable frog
  import:        shared-properties
  main-is:       frog.hs
  build-depends:
    , base         ^>=4.21.0.0
    , containers   ^>=0.8
    , MonadRandom  ^>=0.6.1

executable hangman
  import:        shared-properties
  main-is:       hangman.hs
  build-depends: base ^>=4.21.0.0

--executable razzledazzle
--  hs-source-dirs:      src
--  main-is:             razzledazzle.hs
--  --  build-depends:       base ^>=4.21.0.0, monad-loops, probability, random, rando, utility-ht ^>=0.0.17.2

executable snl
  import:        shared-properties
  main-is:       snl.hs
  build-depends:
    , ansi-terminal  ^>=1.1.2
    , base           ^>=4.21.0.0
    , containers     ^>=0.8
    , lens           ^>=5.3.3
    , MonadRandom    ^>=0.6.1
    , mtl            ^>=2.3.1

-- aeson, protobuf, random, yaml ^>=0.11.11.2

executable sudoku
  import:        shared-properties
  main-is:       sudoku.hs
  build-depends:
    , base        ^>=4.21.0.0
    , containers  ^>=0.8
    , extra       ^>=1.8
    , games       ^>=0.2.0.0
    , vector      ^>=0.13.2.0

executable sudoku-dev
  import:         shared-properties
  ghc-options:    -Wwarn
  hs-source-dirs: src lib
  main-is:        sudoku.hs
  other-modules:  Propagator
  build-depends:
    , base        ^>=4.21.0.0
    , containers  ^>=0.8
    , extra       ^>=1.8
    , lattices    ^>=2.2.1
    , vector      ^>=0.13.2.0

executable yesyes
  import:        shared-properties
  main-is:       yesyes.hs
  build-depends: base ^>=4.21.0.0

test-suite games-test
  import:             shared-properties
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Game.BounceSpec
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base        ^>=4.21.0.0
    , games       ^>=0.2.0.0
    , hspec       ^>=2.11.10
    , QuickCheck  ^>=2.15.0.1

  build-tool-depends: hspec-discover:hspec-discover

-- , hspec-core ^>=2.11.10
-- , hspec-expectations ^>=0.8.4
