name:                ghcjs-stuff
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danwdart/dansstuff#readme
license:             AGPL-3.0-only
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- Run with --ghcjs --allow-newer

executable unfart
  hs-source-dirs:      src
  main-is:             extension/unfart.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, Cabal, cabal-doctest, containers, jsaddle, ghcjs-base, ghcjs-dom
  cpp-options:         -DGHCJS_BROWSER

executable frp
  hs-source-dirs:      src
  main-is:             frp.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, blaze-html, blaze-markup, bytestring, Cabal, cabal-doctest, containers, ghcjs-dom, jsaddle, jsaddle-dom, jsaddle-warp, reactive-banana
  cpp-options:         -DGHCJS_BROWSER

executable graph
  hs-source-dirs:      src
  main-is:             graph.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, Cabal, cabal-doctest, ghcjs-base, ghcjs-dom, jsaddle
  cpp-options:         -DGHCJS_BROWSER

executable helloworld
   hs-source-dirs:      src
   main-is:             HelloMain.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5, Cabal, cabal-doctest, containers, ghcjs-dom, jsaddle, jsaddle-dom, jsaddle-warp
   cpp-options:         -DGHCJS_BROWSER

executable mine
  hs-source-dirs:      src
  main-is:             mine.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, Cabal, cabal-doctest, containers, ghcjs-dom, jsaddle, jsaddle-dom, jsaddle-warp
  cpp-options:         -DGHCJS_BROWSER