name:               hsjava
version:            0.2.0.0
synopsis:           Nothing
license:            AGPL-3.0
license-file:       LICENSE
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
category:           Nothing
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      3.12

executable hsjava
  main-is:            Main.hs
  build-depends:      base ^>=4.21.0.0
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures

-- -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures -- only works on recent ghc
