cabal-version:      3.12
name:               hsjava
version:            0.2.0.0
synopsis:           Nothing
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
category:           Nothing
build-type:         Simple
extra-source-files: ChangeLog.md

executable hsjava
  main-is:            Main.hs
  build-depends:      base >=4.21 && <4.23
  default-extensions: UnicodeSyntax
  hs-source-dirs:     src
  default-language:   GHC2024
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures

-- -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures -- only works on recent ghc
