cabal-version:       3.0
name:                jsaddle-stuff
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danwdart/dansstuff#readme
license:             AGPL-3.0-only
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:  README.md
data-files:          *.html
data-dir:            data

executable tumblreasyswitch
  hs-source-dirs:      src
  main-is:             extension/tumblreasyswitch.hs
  default-language:    Haskell2010
-- build-depends:       base >= 4.7 && < 5, ghcjs-base, ghcjs-dom, containers
  build-depends:       base >= 4.7 && < 5, containers, jsaddle
  cpp-options:         -DGHCJS_BROWSER

executable canvas
  hs-source-dirs:      src
  main-is:             canvas.hs
  default-language:    Haskell2010
-- build-depends:       base >= 4.7 && < 5, ghcjs-base, ghcjs-dom, containers
  build-depends:       base >= 4.7 && < 5, containers, jsaddle, jsaddle-dom, jsaddle-warp
  cpp-options:         -DGHCJS_BROWSER

executable cardioid
  hs-source-dirs:      src
  main-is:             cardioid.hs
  default-language:    Haskell2010
-- build-depends:       base >= 4.7 && < 5, ghcjs-base, ghcjs-dom, containers
  build-depends:       base >= 4.7 && < 5, containers, jsaddle
  cpp-options:         -DGHCJS_BROWSER

executable cfe
  hs-source-dirs:      src
  main-is:             cfe.hs
  default-language:    Haskell2010
-- build-depends:       base >= 4.7 && < 5, ghcjs-base, ghcjs-dom, containers
  build-depends:       base >= 4.7 && < 5, blaze-html, bytestring, containers, jsaddle, jsaddle-dom, jsaddle-warp, split
  cpp-options:         -DGHCJS_BROWSER

executable pure-demo
  hs-source-dirs:      src
  main-is:             pure-demo.hs
  default-language:    Haskell2010
-- build-depends:       base >= 4.7 && < 5, ghcjs-base, ghcjs-dom, containers
  build-depends:       base >= 4.7 && < 5, blaze-html, bytestring, containers, jsaddle, jsaddle-dom, jsaddle-warp
  cpp-options:         -DGHCJS_BROWSER

