cabal-version:      3.12
name:               kmlfun
version:            0.2.0.0
synopsis:           kml fun
description:        Fun with kml
bug-reports:        https://github.com/danwdart/projects/issues
license:            CC0-1.0
author:             Dan Dart
maintainer:         git@dandart.co.uk
copyright:          2021 Dan Dart
category:           Mapping
extra-source-files: CHANGELOG.md

executable kmlfun
  main-is:            Main.hs
  build-depends:
    , base  ^>=4.21.0.0
    -- , gps   ^>=1.2

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures

-- -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures -- only works on recent ghc
